# cvrptw

./: .gitignore  CMakeLists.txt  README.md  generator.py  lns_runner.py  milp.py  milp_runner.py  ortools_runner.py  parse.py  pyrefly.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
ACO/: main.py
aco_results/: aco_results-10-30.txt  aco_results-100-100.txt  aco_results-100-30.txt  aco_results-15-30.txt  aco_results-20-100.txt  aco_results-30-30.txt  aco_results-5-30.txt  aco_results-50-100.txt  aco_results-50-30.txt
cfg/: config.yaml
cvrptw/: solution.py
include/: cli.hpp  pch.hpp  problem.hpp  recursion.hpp  route.hpp  utils.hpp
lns/: __init__.py  problem.py
master/: README.md  main.py  requirements.txt
master/local_search/: CMakeLists.txt
master/local_search/include/: arrival.hpp  problem.hpp
master/local_search/src/: local_search.cpp
master/local_search/src/common/: route.cpp
milp/: cp_sat_2d.py  cp_sat_2d_optimized.py  gemini_scip.py  sat.py  sat_2d.py  sat_3d.py  sat_3d_with_load_vars.py  sat_3d_with_sequenced_vehicles.py  sat_with_load_vars.py  sat_with_sequenced_vehicles.py  scip.py  scip_3d.py  scip_3d_with_load_vars.py  scip_with_load_vars.py  utils.py
milp_results/: cp_sat_2d_100.txt  cp_sat_2d_101_100s.txt  cp_sat_2d_10_30s.txt  cp_sat_2d_15.txt  cp_sat_2d_15_30s.txt  cp_sat_2d_20_30s.txt  cp_sat_2d_25_30s.txt  cp_sat_2d_30_30s.txt  cp_sat_2d_50.txt  cp_sat_2d_5_30s.txt  cp_sat_2d_optimized_101_100s.txt  cp_sat_2d_optimized_30_30s.txt  gemini_scip_100.txt  gemini_scip_15.txt  sat_100.txt  sat_15.txt  sat_2d_100.txt  sat_2d_100_100s.txt  sat_2d_10_30s.txt  sat_2d_15.txt  sat_2d_15_30s.txt  sat_2d_20_30s.txt  sat_2d_25_30s.txt  sat_2d_30_100s.txt  (+39 more)
(+48 files in other folders)
